--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.5",
+    "vue2-filters": "^0.11.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
