--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.5",
     "vue2-filters": "^0.11.0",
+    "vuelidate": "^0.7.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
